<resources>
    <string name="app_name">iWaterLogistic</string>
    <string name="login_id">ID</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="enter_text">Войти</string>
    <string name="exit_text">Выход</string>
    <string name="map">Карта</string>
    <string name="logo">Лого</string>

    <string name="completeOrder">Завершенные заказы</string>
    <string name="ProcessedOrders">Обработанные</string>
    <string name="inWork">В Работе</string>
    <string name="orders">Заказы</string>
    <string name="history">История</string>
    <string name="exit_message_dialog">Вы хотите выйти из приложения?</string>
    <string name="confirmLogout">Вы уверены, что хотите выйти из своего аккаунта?</string>
    <string name="confirmEndDay">Вы уверены, закончить рабочий день и отправить отчет?</string>
    <string name="confirmEndOrder">Пожалуйста выполните все не завершенные заказы прежде чем закончить день или свяжитесь с диспетчером для переноса заказов</string>

    <string name="yes">Да</string>
    <string name="ok">Ок</string>
    <string name="no">Нет</string>

    <string name="cancel">Отмена</string>
    <string name="current_order">Плановые заказы</string>
    <string name="no_current_orders">Нет заказов</string>
    <string name="general_map">Общая карта</string>
    <string name="string_one">1</string>
    <string name="client_tare">Тара у клиента</string>

    <string name="order_card">Карточка заказа</string>
    <string name="test_order_num_date">№ 0 00.00.0000</string>
    <string name="test_order_address">_. _, _, _. _ _</string>

    <string name="to_ship_order">Отгрузить заказ</string>
    <string name="see_on_map">Посмотреть на карте</string>
    <string name="call_client">Позвонить</string>
    <string name="copy_address">Копировать адрес</string>
    <string name="name_order">имя товара</string>
    <string name="price_order">цена:</string>
    <string name="info_client">информация о клиенте</string>
    <string name="phone_numbers">телефоны для связи</string>
    <string name="notes_order">примичания к заказу</string>
    <string name="makeCall">Звонок клиенту. Выберите номер телефона</string>
    <string name="count_tank_to_back">Кол-во бутылок к возврату</string>
    <string name="no_to_ship_order">заказ не отгружен</string>
    <string name="about_order">Карточка заказа</string>

    <string name="cash">Наличные</string>
    <string name="terminal">Терминал</string>
    <string name="transfer">Перевод</string>
    <string name="on_site">на сайте</string>
    <string name="chek_documents">Документы подписаны</string>
    <string name="note_to_order">Примичания к заказу</string>

    <string name="returnToCurrent">Вернуться к текущему путевому листу</string>
    <string name="time_complete">Время отгрузки: 14:45</string>
    <string name="general_report">Общий отчет</string>
    <string name="set_cost">задать расходы</string>
    <string name="title_activity_maps">Map</string>
    <string name="expenditure">Введите расход</string>

    <string name="report">Отчет</string>
    <string name="take_away_tank">Забрано бутелей:</string>
    <string name="total_money">Всего получено денег:</string>
    <string name="cash_total">Наличные всего:</string>
    <string name="cash_on_site">Оплата на сайте:</string>
    <string name="cash_on_terminal">Оплата через терминал:</string>
    <string name="cash_many">Оплата наличными:</string>
    <string name="no_cash_money">Оплата безналичными:</string>
    <string name="complete_orders_total">Всего выполнено заказов</string>
    <string name="name_expenses">Наименование расхода:</string>
    <string name="cost">123руб</string>
    <string name="expenses">Расходы</string>
    <string name="end_session">Закончить день</string>
    <string name="start_work">Начать день</string>
    <string name="move_to_load_drive">Перейти к экрану погрузки</string>
    <string name="current_orders">Заказы</string>
    <string name="cash_many_to_report">Наличных к сдаче</string>
    <string name="reports">Oтчеты</string>
    <string name="address_text">адрес:</string>
    <string name="open_card_order">открыть карточку заказа</string>
    <string name="time">Время</string>
    <string name="in_navigator">В навигатор</string>
    <string name="product">Товар</string>>
    
    <string name="permission_rationale">
        Необходимо разрешение на определение вашего местоположения
    </string>
    <string name="arrow_description">image_arrow</string>
    <string name="expenses_name_add">Введите имя расхода</string>
    <string name="one_expenses">РАСХОД</string>
    <string name="expenses_cost">Введите сумму расхода</string>
    <string name="expenses_cost_label">Сумма расхода:</string>
    <string name="add_photo_check">Прикрепить чек(фото)</string>
    <string name="send">Отправить</string>
    <string name="check_report">Сверка отчета</string>
    <string name="send_report">Отправить отчет</string>
    <string name="add_photo_report">Отчет по терминалу "Сверка итогов"</string>
    <string name="total_load">Общая загрузка</string>
    <string name="additional_loading">Дополнительная загрузка</string>
    <string name="add">Добавить</string>
    <string name="restore">восстановить</string>
    <string name="return_time">Когда доставить:</string>
    <string name="client_label">Клиент:</string>
    <string name="phone">Телефон:</string>
    <string name="products">Товары:</string>
    <string name="price_method">Метод оплаты:</string>
    <string name="tank_client_return">Тары у клиента:</string>
</resources>